fix: the lock icon z-index

--- a/src/components/share/work-card/work-card.scss
+++ b/src/components/share/work-card/work-card.scss
@@ -36,7 +36,6 @@
     bottom: 20px;
     width: 20px;
     height: 20px;
-    z-index: 100;
     display: block;
 
     @include fhd {
